destination-rule.yaml
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: app1
spec:
  host: app1
  subsets:
    - name: v1
      annotations:
        version: v1
    - name: v2
      annotations:
        version: v2
